v8/tests/messages/lookup-error.out
lookup-error.js:1: Uncaught TypeError: Object #<an Object> has no method 'foo'
({}).foo()
     ^
